Started implementing proper EMI visuals for Tool Usage recipes.